crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_blank_line_between_statements.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n;\\n\\nMATCH (m) RETURN m\")"
---
MATCH (n)
RETURN n;

MATCH (m)
RETURN m
