crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_chain_anonymous_nodes.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (:Person)-[:KNOWS]->(:Person)-[:LIKES]->(m:Movie) RETURN m.title\")"
---
MATCH (:Person)-[:KNOWS]->(:Person)-[:LIKES]->(m:Movie)
RETURN m.title
