crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_chain_left_direction.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (a:Movie)<-[r:ACTED_IN]-(b:Person) RETURN a.title, b.name\")"
---
MATCH (a:Movie)<-[r:ACTED_IN]-(b:Person)
RETURN a.title, b.name
