crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_chain_mixed_directions.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (a)-[r1]->(b)<-[r2]-(c) RETURN a, b, c\")"
---
MATCH (a)-[r1]->(b)<-[r2]-(c)
RETURN a, b, c
