crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_chain_multiple_labels.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person:Employee) RETURN n.name\")"
---
MATCH (n:Person:Employee)
RETURN n.name
