crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_chain_node_with_props.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person {name: 'Alice', age: 30}) RETURN n\")"
---
MATCH (n:Person {name: 'Alice', age: 30})
RETURN n
