crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_chain_undirected.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (a:Person)-[r:FRIENDS]-(b:Person) RETURN a.name, b.name\")"
---
MATCH (a:Person)-[r:FRIENDS]-(b:Person)
RETURN a.name, b.name
