crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_comment_before_return.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person)\\n// project fields\\nRETURN n.name, n.age\")"
---
MATCH (n:Person)
// project fields
RETURN n.name, n.age
